--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f3f6f9;
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  overflow-x: hidden;
 }
 
 body::backdrop {
