--- a/src/index.css
+++ b/src/index.css
@@ -402,7 +402,7 @@ div:has(input:focus) .numbers {
   border-color: #dfdfdf;
 }
 .react-datepicker__navigation:hover span::before {
-  border-color: #0092a0;
+  border-color: #3b82f6;
 }
 .react-datepicker__navigation--next {
   right: -5px !important;
@@ -475,13 +475,13 @@ div:has(input:focus) .numbers {
   border-right: 1px solid #dfdfdf !important;
 }
 .react-datepicker__day:hover {
-  background-color: #0092a0 !important;
+  background-color: #3b82f6 !important;
   color: white !important;
 }
 /* first and last day */
 .react-datepicker__day--selected,
 .react-datepicker__day--keyboard-selected {
-  background-color: #0092a0 !important;
+  background-color: #3b82f6 !important;
   color: white !important;
   font-weight: 600 !important;
 }
@@ -507,10 +507,10 @@ div:has(input:focus) .numbers {
 }
 .react-datepicker_header_dropdown:hover
   .react-datepicker__year-read-view--down-arrow {
-  border-color: #0092a0 !important;
+  border-color: #3b82f6 !important;
 }
 .react-datepicker__year-read-view--selected-year {
-  color: #0092a0 !important;
+  color: #3b82f6 !important;
   font-weight: 600 !important;
   font-size: 14px !important;
   margin: 0 8px;
@@ -524,7 +524,7 @@ div:has(input:focus) .numbers {
   display: block;
   width: 12px !important;
   height: 12px;
-  border-color: #0092a0;
+  border-color: #3b82f6;
   border-right-width: 2px !important;
   border-top-width: 2px !important;
   position: absolute;
@@ -555,5 +555,5 @@ div:has(input:focus) .numbers {
   height: 308px !important;
 }
 .react-datepicker__time-list-item--selected {
-  background-color: #0092a0 !important;
+  background-color: #3b82f6 !important;
 }
